--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 
 Hi and welcome to my website!
 
-<a class="twitter-timeline" href="https://twitter.com/pp_lasek" data-widget-id="586353409034444801">Tweets by @pp_lasek</a>
+<a class="twitter-timeline" href="https://twitter.com/pp_lasek" data-widget-id="586353409034444801" width=200px>Tweets by @pp_lasek</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <!--
 <div class="home">
