--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: home
 ---
 <div class="home">
-<div class="home_left">
+<div class="home_left" style="float: left;">
 Hi and welcome to my website!
 </div>
-<div class="twitter">
+<div style="float: right;" class="twitter">
 <a class="twitter-timeline" href="https://twitter.com/pp_lasek" data-widget-id="586353409034444801" width=200px>Tweets by @pp_lasek</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
