--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ layout: home
 <div class="home_left" style="float: left;">
 Hi and welcome to my website! <br>
 There is nothing here, yet :-)
+
+<img src="images/home.jpg"/>
+
 </div>
 <div style="float: right;" class="twitter">
 <a class="twitter-timeline" href="https://twitter.com/pp_lasek" data-widget-id="586353409034444801" width=200px>Tweets by @pp_lasek</a>
