--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 <div class="home">
-<div class="home_left" style="float: left;">
+<div class="home_left" style="float: left; width: 540px">
 Hi and welcome to my website! <br>
 There is nothing here, yet :-) <br>
 <img src="images/home.jpg"/>
