--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@ layout: home
 <div class="home">
 <div class="home_left" style="float: left; width: 525px">
 Hi and welcome to my website! <br>
-There is nothing here, yet :-) <br>
+
+My name is Piotr and I'm a motivated,
+strategic-thinking professional with
+more than ten years hands-on experience
+in programming, software design and
+data mining.
+Experienced in all the design,
+implementation and testing stages
+of building a software product
+as well as in numerous
+research projects.
+Currently interested in
+interactive data visualization,
+knowledge-based data clustering
+and revenue management techniques.
+
 <img src="images/home.jpg"/>
 </div>
 <div style="float: right;" class="twitter">
