--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@ Hi and welcome to my website! <br>
 My name is Piotr and I'm a motivated,
 strategic-thinking professional with
 more than ten years hands-on experience
-in programming, software design and
-data mining.
+in <i>programming</i>, <i>software design</i> and
+<i>data mining</i>.
 Experienced in all the design,
 implementation and testing stages
 of building a software product
 as well as in numerous
 research projects.
 Currently interested in
-interactive data visualization,
-knowledge-based data clustering
-and revenue management techniques.
+<i>interactive data visualization</i>,
+<i>knowledge-based data clustering</i>
+and <i>revenue management</i> techniques.
 
 <img src="images/home.jpg"/>
 </div>
