--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ strategic-thinking professional with
 more than ten years hands-on experience
 in <i>programming</i>, <i>software design</i> and
 <i>data mining</i>.
-Experienced in all the design,
+I'm experienced in all the design,
 implementation and testing stages
 of building a software product
 as well as in numerous
 research projects.
-Currently interested in
+And currently I'm mostly interested in
 <i>interactive data visualization</i>,
 <i>knowledge-based data clustering</i>
 and <i>revenue management</i> techniques.
