--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@ implementation and testing stages
 of building a software product
 as well as in numerous
 research projects.
-And currently I'm mostly interested in
+<br>
+Recently, I'm mostly interested in
 <i>interactive data visualization</i>,
 <i>knowledge-based data clustering</i>
 and <i>revenue management</i> techniques.
 <br>
+Since August 2014, I'm a <i>Postdoctoral Fellow</i>
+at the York University (Toronto) working
+on new methods of efficient and interactive database
+visualization.
 <br>
 <img src="images/home.jpg"/>
 </div>
