--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: home
 ---
 <div class="home">
 <div class="home_left" style="float: left; width: 525px">
-Hi and welcome to my website! <br>
-<br>
+<p>
+Hi and welcome to my website!
+</p>
+<p>
 My name is Piotr and I'm a motivated,
 strategic-thinking professional with
 more than ten years hands-on experience
@@ -15,17 +17,19 @@ implementation and testing stages
 of building a software product
 as well as in numerous
 research projects.
-<br>
+</p>
+<p>
 Recently, I'm mostly interested in
 <i>interactive data visualization</i>,
 <i>knowledge-based data clustering</i>
 and <i>revenue management</i> techniques.
-<br>
+</p>
+<p>
 Since August 2014, I'm a <i>Postdoctoral Fellow</i>
 at the York University (Toronto) working
 on new methods of efficient and interactive database
 visualization.
-<br>
+</p>
 <img src="images/home.jpg"/>
 </div>
 <div style="float: right;" class="twitter">
