--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: home
 <div class="home">
 <div class="home_left" style="float: left; width: 525px">
 <p>
-Hi and welcome to my website!
+Welcome to my website!
 </p>
 <p>
-My name is Piotr and I'm a motivated,
-strategic-thinking professional with
+My name is Piotr, I'm a computer scientist and
+data analytics enthusiast with
 more than ten years hands-on experience
 in <i>programming</i>, <i>software design</i> and
 <i>data mining</i>.
