--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
 <div class="home">
 <div class="home_left" style="float: left; width: 525px">
-<img src="images/home.jpg"/>
+<img src="images/home.jpg" style="margin-bottom: 5px;"/>
 <p>
 Welcome to my website!
 </p>
