--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ in <i>programming</i>, <i>software design</i> and
 I'm experienced in all the design,
 implementation and testing stages
 of building a software product
-as well as in numerous
+and took part in several
 research projects.
 </p>
 <p>
-Recently, I'm mostly interested in
+Recently, I've been mostly interested in
 <i>interactive data visualization</i>,
 <i>knowledge-based data clustering</i>
 and <i>revenue management</i> techniques.
