--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ I'm experienced in all the design,
 implementation and testing stages
 of building a software product
 and took part in several
-research projects.
+research projects concerning text mining,
+semi-automatic ontology building and data clustering.
 </p>
 <p>
 Recently, I've been mostly interested in
