--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ layout: home
 <div class="home_left" style="float: left; width: 525px">
 <img src="images/home.jpg" style="margin-bottom: 15px;"/>
 <p>
-Welcome to my website!
+Hi, welcome to my website!
 </p>
 <p>
-My name is Piotr, I'm a computer scientist and
+I'm a computer scientist and
 data analytics enthusiast with
 more than ten years hands-on experience
 in <i>programming</i>, <i>software design</i> and
