--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ semi-automatic ontology building and data clustering.
 </p>
 <p>
 Recently, I've been mostly interested in
-<i>interactive data visualization</i>,
+<i>interactive database visualization</i>,
 <i>knowledge-based data clustering</i>
 and <i>revenue management</i> techniques.
 </p>
 <p>
 Since August 2014, I'm a <i>Postdoctoral Fellow</i>
-at the York University (Toronto) working
+at the York University (Toronto) working in the database lab
 on new methods of efficient and interactive database
 visualization.
 </p>
