--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ at the York University (Toronto) working in the database lab
 on new methods of efficient and interactive database
 visualization.
 </p>
+<p>
+Here is my <a href="files/Piotr_Lasek-October_2015.pdf">CV</a>.
+</p>
 </div>
 <div style="float: right;" class="twitter">
 <a class="twitter-timeline" href="https://twitter.com/pp_lasek" data-widget-id="586353409034444801" width=200px>Tweets by @pp_lasek</a>
