--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@ layout: home
 Hi and welcome to my website!
 </p>
 
+<p>
+Here are some presentation related to my current activities:
+
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTuBAdxocLiNVFVFTDOBFB3oHYgstOFAsgSIubM6V50fG63_jCOOK2A3hvho6Vo6ie9axBEAxk7do30/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</p>
+
 </div>
 <div style="float: right;" class="twitter">
 <a class="twitter-timeline" href="https://twitter.com/pp_lasek" data-widget-id="586353409034444801" width=200px>Tweets by @pp_lasek</a>
