--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@ Hi and welcome to my website!
 <p>
 Here are some presentation related to my current activities:
 
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTuBAdxocLiNVFVFTDOBFB3oHYgstOFAsgSIubM6V50fG63_jCOOK2A3hvho6Vo6ie9axBEAxk7do30/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<ul>
+	<li><a href="talks/datavis">Beginnings and current challenges in data visualization</datavis></li>
+<ul>
+
 </p>
-
-
-1. abc
-2. def
 
 </div>
 <div style="float: right;" class="twitter">
