--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Hi and welcome to my website!
 </p>
 
 <p>
-Here are some presentation related to my current activities:
+Here are some presentations related to my current activities:
 
 <ul>
 	<li><a href="talks/datavis">Beginnings and current challenges in data visualization</datavis></li>
